# e-campus

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
config/: .env.example
server/: urls.py
server/apps/comment/: admin.py  apps.py  models.py  views.py
server/apps/comment/logic/: filters.py  permissions.py  serializers.py
server/apps/comment/migrations/: 0001_initial.py  0002_commentactivity.py
server/apps/comment/tests/: test_endpoints.py  test_models.py
server/apps/core/: constants.py  models.py
server/apps/core/logic/: schemas.py
server/apps/core/tests/: test_models.py
server/apps/group/: admin.py  apps.py  models.py  views.py
server/apps/group/logic/: permissions.py  serializers.py
server/apps/group/migrations/: 0001_initial.py
server/apps/group/tests/: test_endpoints.py  test_models.py
server/apps/topic/: admin.py  apps.py  models.py  views.py
server/apps/topic/logic/: filters.py  permissions.py  serializers.py
server/apps/topic/migrations/: 0001_initial.py  0002_topicactivity.py
server/apps/topic/tests/: test_endpoints.py  test_models.py
server/apps/user/: admin.py  models.py  urls.py  views.py
server/apps/user/logic/: schemas.py  serializers.py
server/apps/user/migrations/: 0001_initial.py
server/apps/user/tests/: test_endpoints.py  test_models.py
server/settings/: __init__.py
server/settings/components/: __init__.py  common.py  restframework.py
server/settings/environments/: local.py
